# NN_operator_CUDA

./: README.md
include/: tensor_add_ng.h
kernel/: tensor_add_ng.cu
pytorch/: CMakeLists.txt  main.py  setup.py  tensor_add_ng_ops.cpp
